Add an example for a <h:dataTable/> component

--- a/jsf-exporter-test/pom.xml
+++ b/jsf-exporter-test/pom.xml
@@ -44,6 +44,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.lapis.jsfexporter</groupId>
+			<artifactId>export-source-jsf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.lapis.jsfexporter</groupId>
 			<artifactId>export-source-richfaces</artifactId>
 		</dependency>
 		<dependency>
